fixed centering for values on small screen.  2nd image and hours not in correct order on small screen

--- a/public/css/awauto.css
+++ b/public/css/awauto.css
@@ -53,14 +53,14 @@ h3 {
         display: flex;
         margin-bottom: 50px;
         justify-content: center;
+    
     }
-
 
 
 }
 /* -------------------- */
 /* order sections */
-#titleText {
+#title {
     order: 1;
 }
 
@@ -122,7 +122,6 @@ h3 {
 }
 
 .values {
-    margin: 20px;
     /* border: 2px solid black; */
     background:#80808014;
     padding-left: 20px;
@@ -130,6 +129,10 @@ h3 {
     height: 175px;
     justify-content: start;
     max-width: 300px;
+    /* centers on smaller screen */
+    margin: 30px auto; 
+
+ 
     
 }
 
